// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLogoMarkup by default should render the right structure 1`] = `
<MenuItem
  className="has-sub-text"
  href="someLogoHref"
  link={true}
>
  <a
    className="link item has-sub-text"
    href="someLogoHref"
    onClick={[Function]}
  >
    <FlexContainer
      alignContent={null}
      alignItems={null}
      className={null}
      flexDirection="column"
      flexWrap={null}
      justifyContent="center"
    >
      <div
        className="flex-container"
        style={
          Object {
            "alignContent": null,
            "alignItems": null,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": "1",
            "flexWrap": null,
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <Heading
          className={null}
          hasMargin={true}
          isColorInverted={false}
          size="small"
          textAlign={null}
        >
          <Header
            as="h4"
            className=""
            inverted={false}
            textAlign={null}
          >
            <h4
              className="ui header"
            >
              someLogoText
            </h4>
          </Header>
        </Heading>
        <Paragraph
          isCompact={false}
          size="tiny"
          weight={null}
        >
          <p
            className="tiny"
          >
            someLogoTagline
          </p>
        </Paragraph>
      </div>
    </FlexContainer>
  </a>
</MenuItem>
`;

exports[`getLogoMarkup if \`logoSrc\`, \`logoSizes\` and \`logoSrcSet\` are passed should render the right structure 1`] = `
<MenuItem
  className="has-sub-text"
  href="someLogoHref"
  link={true}
>
  <a
    className="link item has-sub-text"
    href="someLogoHref"
    onClick={[Function]}
  >
    <FlexContainer
      alignContent={null}
      alignItems={null}
      className={null}
      flexDirection="column"
      flexWrap={null}
      justifyContent="center"
    >
      <div
        className="flex-container"
        style={
          Object {
            "alignContent": null,
            "alignItems": null,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": "1",
            "flexWrap": null,
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <Image
          alt="someLogoText"
          as="img"
          sizes="someSizes"
          src="someLogoSrc"
          srcSet="someSrcSet"
          ui={true}
        >
          <img
            alt="someLogoText"
            className="ui image"
            sizes="someSizes"
            src="someLogoSrc"
            srcSet="someSrcSet"
          />
        </Image>
        <Paragraph
          isCompact={false}
          size="tiny"
          weight={null}
        >
          <p
            className="tiny"
          >
            someLogoTagline
          </p>
        </Paragraph>
      </div>
    </FlexContainer>
  </a>
</MenuItem>
`;
